--- a/contacto.html
+++ b/contacto.html
@@ -10,7 +10,8 @@
 
 <header>
   <div class="container">
-    <h1>Menú de Comida</h1>
+    <h1>Contactanos</h1>
+    <div id="user-info">Usuario: NombreDeUsuario</div>
     <nav>
       <ul>
         <li><a href="index.html">Inicio</a></li>
@@ -41,6 +42,6 @@
     </form>
   </div>
 </section>
-
+  <script src="script/script.js"></script>
 </body>
 </html>
