--- a/index.html
+++ b/index.html
@@ -24,15 +24,20 @@
   </div>
 
   <div id="main-content">
-    <!-- Tu contenido HTML va aquí -->
+  
     <header>
       <div class="container">
         <h1>Aguayo - Tu Destino para Comida y Bebidas en Línea</h1>
+        <div id="user-info">Usuario: NombreDeUsuario</div>
         <nav>
           <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="menu.html">Menú</a></li>
             <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="login.html">login</a></li>
+          
+          
+  </div>
           </ul>
         </nav>
         <input type="text" id="search-bar" placeholder="Buscar productos...">
@@ -223,5 +228,6 @@
 
   <script src="script/script.js"></script>
   <script src="script/carrito.js"></script>
+
 </body>
 </html>
