--- a/menu.html
+++ b/menu.html
@@ -5,20 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Menú - Aguayos</title>
   <link rel="stylesheet" href="estilo/comida.css">
-</head>
-<body>
-  <header>
-    <div class="container">
-      <h1>Menú</h1>
-      <nav>
-        <ul>
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="menu.html">Menú</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+<header>
+      <div class="container">
+        <h1>Aguayo - Tu Destino para Comida y Bebidas en Línea</h1>
+         <div id="user-info">Usuario: NombreDeUsuario</div>
+        <nav>
+          <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+          </ul>
+        </nav>
+        <input type="text" id="search-bar" placeholder="Buscar productos...">
+        <button id="abrir-carrito"><a href="carrito.html">Ver Carrito</a></button>
+
+      </div>
+    </header>
 
   <section id="menu" class="container">
     <h2>Nuestro Menú</h2>
@@ -196,6 +197,8 @@
       <p>&copy; 2024 Aguayos. Todos los derechos reservados.</p>
     </div>
   </footer>
-    <script src="script/script.js"></script>
+    
+  <script src="script/carrito.js"></script>
+  <script src="script/menu.js"></script>
 </body>
 </html>
